--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: Flutter CI
 on:
   pull_request:
-    branches: [ main]  # <-- VÉRIFIEZ L'ESPACE ICI !
+    branches: [ main] 
   push:
     branches: [main]
 jobs:
@@ -11,13 +11,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
         with:
-          # Utilise la dernière version stable.
           channel: 'stable' 
-          # On peut aussi tenter une version spécifique récente si le 'stable' ne suffit pas
-          # flutter-version: '3.22.3' 
       - name: Install dependencies
-        # Ajout de l'option "--no-version-check" pour ignorer le conflit pubspec/Dart SDK
-        run: flutter pub get --no-version-check 
+        run: flutter pub get 
       - name: Run tests
         run: flutter test
       - name: Analyze code
